--- a/programs/LOL-Coin/Cargo.toml
+++ b/programs/LOL-Coin/Cargo.toml
@@ -3,9 +3,19 @@ name = "lol_coin"
 version = "0.1.0"
 edition = "2021"
 
-[dependencies]
-anchor-lang = "0.30.0"
-anchor-spl = "0.30.0"
+[lib]
+crate-type = ["cdylib", "lib"]
+name = "lol_coin"
 
 [features]
+default = []
+cpi = ["no-entrypoint"]
 no-entrypoint = []
+no-idl = []
+no-log-ix-name = []
+idl-build = ["anchor-lang/idl-build"]
+
+[dependencies]
+anchor-lang = "0.30.1"
+anchor-spl = "0.30.1"
+solana-program = "1.17.5"
