--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,23 +1,17 @@
 [workspace]
 members = [
-    "programs/LOL-Coin"
+    "programs/lol_coin"
 ]
+
 resolver = "2"
 
-[package]
-name = "lol_coin"
-version = "0.1.0"
-edition = "2021"
+[profile.release]
+overflow-checks = true
+lto = "fat"
+codegen-units = 1
 
-[dependencies]
-anchor-lang = "0.30.0"
+[profile.release.build-override]
+opt-level = 3
+incremental = false
+codegen-units = 1
 
-[features]
-no-entrypoint = []
-
-[dependencies]
-anchor-spl = "0.30.0"
-
-[dependencies]
-anchor-lang = "0.30.0"
-anchor-spl = "0.30.0"
