--- a/Anchor.toml
+++ b/Anchor.toml
@@ -1,9 +1,12 @@
 [programs.testnet]
-lol_coin = "4LuztCDUrco5Nt
+lol_coin = "4LuztCDUrco5NtduFvK2V8JrTXWWBt2NefTpK3vaSGfB"
 
 [provider]
-cluster = "localnet"
+cluster = "https://api.testnet.solana.com"
 wallet = "~/.config/solana/id.json"
 
 [scripts]
 test = "yarn run ts-mocha -p ./tsconfig.json -t 1000000 tests/**/*.ts"
+
+[toolchain]
+anchor_version = "0.30.1"
