--- a/programs/LOL-Coin/Cargo.toml
+++ b/programs/LOL-Coin/Cargo.toml
@@ -2,20 +2,14 @@
 name = "lol_coin"
 version = "0.1.0"
 edition = "2021"
+description = "LOL-Coin Staking Program"
 
 [lib]
 crate-type = ["cdylib", "lib"]
 name = "lol_coin"
 
-[features]
-default = []
-cpi = ["no-entrypoint"]
-no-entrypoint = []
-no-idl = []
-no-log-ix-name = []
-idl-build = ["anchor-lang/idl-build"]
-
 [dependencies]
 anchor-lang = "0.30.1"
 anchor-spl = "0.30.1"
-solana-program = "1.17.5"
+solana-program = "1.16.1"
+
