--- a/Dargo.toml
+++ b/Dargo.toml
@@ -1,7 +1,37 @@
 [package]
-name = "validator"
-version = "0.1.0"
+name = "solana-validator"
+version = "2.2.7"
 edition = "2021"
+authors = ["Solana Maintainers <maintainers@solana.com>"]
+description = "Solana Validator Node"
+license = "Apache-2.0"
+repository = "https://github.com/solana-labs/solana"
+readme = "README.md"
 
 [dependencies]
+# Core Solana libraries
+solana-accounts-db = "=2.2.7"
+solana-cli-output = "=2.2.7"
+solana-compute-budget = "=2.2.7"
+solana-core = "=2.2.7"
+solana-geyser-plugin-manager = "=2.2.7"
+solana-gossip = "=2.2.7"
+solana-ledger = "=2.2.7"
+solana-logger = "=2.3.1"
+solana-net-utils = "=2.2.7"
+solana-program-test = "=2.2.7"
+solana-rpc = "=2.2.7"
+solana-rpc-client = { default-features = false, version = "=2.2.7" }
+solana-rpc-client-api = "=2.2.7"
+solana-runtime = "=2.2.7"
+solana-sdk = { features = ["openssl-vendored"], version = "=2.2.2" }
+solana-streamer = "=2.2.7"
+solana-tpu-client = { default-features = false, version = "=2.2.7" }
 
+# Additional dependencies
+log = "0.4.25"
+serde_derive = "1.0.217"
+serde_json = "1.0.139"
+bincode = "1.3.3"
+crossbeam-channel = "0.5.14"
+base64 = "0.22.1"
